[gd_scene load_steps=71 format=2]

[ext_resource path="res://assets/drop.png" type="Texture" id=1]
[ext_resource path="res://characters/enemies/MantisMove_BIG.png" type="Texture" id=2]
[ext_resource path="res://characters/enemies/enemy_big.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/sound_enemy1.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/shadow.png" type="Texture" id=5]
[ext_resource path="res://characters/enemies/BeetleHorde.png" type="Texture" id=6]
[ext_resource path="res://characters/enemies/MaggotWalk2_BIG.png" type="Texture" id=7]

[sub_resource type="Shader" id=83]
code = "shader_type canvas_item;

uniform vec4 color : hint_color = vec4(1.0, 1.0, 0.6, 1.0); // Pale yellow with full opacity
uniform float width : hint_range(0, 9) = 0.3;
uniform int pattern : hint_range(0, 2) = 0; // diamond, circle, square
uniform bool inside = true;
uniform bool add_margins = false; // only useful when inside is false

void vertex() {
    if (add_margins) {
        // Expand vertices based on the width and UV
        VERTEX += (UV * 2.0 - 1.0) * width;
    }
}

bool hasContraryNeighbour(vec2 uv, vec2 texture_pixel_size, sampler2D texture) {
    for (float i = -ceil(width); i <= ceil(width); i++) {
        float x = abs(i) > width ? width * sign(i) : i;
        float offset;

        if (pattern == 0) {
            offset = width - abs(x);
        } else if (pattern == 1) {
            offset = floor(sqrt(pow(width + 0.5, 2) - x * x));
        } else if (pattern == 2) {
            offset = width;
        }

        for (float j = -ceil(offset); j <= ceil(offset); j++) {
            float y = abs(j) > offset ? offset * sign(j) : j;
            vec2 xy = uv + texture_pixel_size * vec2(x, y);

            if ((xy != clamp(xy, vec2(0.0), vec2(1.0)) || texture(texture, xy).a <= 0.0) == inside) {
                return true;
            }
        }
    }
    return false;
}

void fragment() {
    vec2 uv = UV;
    vec4 texColor = texture(TEXTURE, uv);

    if (add_margins) {
        vec2 texture_pixel_size = vec2(1.0) / (vec2(1.0) / TEXTURE_PIXEL_SIZE + vec2(width * 2.0));
        uv = (uv - texture_pixel_size * width) * TEXTURE_PIXEL_SIZE / texture_pixel_size;

        if (uv != clamp(uv, vec2(0.0), vec2(1.0))) {
            COLOR.a = 0.0;
        } else {
            texColor = texture(TEXTURE, uv);
        }
    }

    if ((texColor.a > 0.0) == inside && hasContraryNeighbour(uv, TEXTURE_PIXEL_SIZE, TEXTURE)) {
        // Apply the pale yellow color directly
        COLOR.rgb = inside ? mix(texColor.rgb, color.rgb, color.a) : color.rgb;
        COLOR.a = (1.0 - texColor.a) * color.a + texColor.a; // Ensure proper alpha blending
    } else {
        COLOR = texColor;
    }
}
"

[sub_resource type="ShaderMaterial" id=40]
shader = SubResource( 83 )
shader_param/color = Color( 0.721569, 0, 0, 1 )
shader_param/width = 0.3
shader_param/pattern = 0
shader_param/inside = true
shader_param/add_margins = false

[sub_resource type="CapsuleShape2D" id=19]
radius = 20.0
height = 4.0

[sub_resource type="CapsuleShape2D" id=22]
radius = 26.0
height = 3.99999

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "walk_left",
"speed": 7.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "walk_right",
"speed": 7.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "walk_up",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 6 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 6 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 6 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 6 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 6 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 6 )
region = Rect2( 160, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 6 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 6 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 6 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 6 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 6 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 6 )
region = Rect2( 160, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 6 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 6 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 6 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 6 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 6 )
region = Rect2( 128, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 6 )
region = Rect2( 160, 96, 32, 32 )

[sub_resource type="SpriteFrames" id=65]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
}, {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ) ],
"loop": true,
"name": "walk_left",
"speed": 7.0
}, {
"frames": [ SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ) ],
"loop": true,
"name": "walk_right",
"speed": 7.0
}, {
"frames": [ SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ) ],
"loop": true,
"name": "walk_up",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 7 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 7 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 7 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 7 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 7 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 7 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 7 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 7 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 7 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 7 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 7 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 7 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="SpriteFrames" id=82]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
}, {
"frames": [ SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ) ],
"loop": true,
"name": "walk_left",
"speed": 7.0
}, {
"frames": [ SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ) ],
"loop": true,
"name": "walk_right",
"speed": 7.0
}, {
"frames": [ SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ) ],
"loop": true,
"name": "walk_up",
"speed": 5.0
} ]

[node name="enemy_big" type="KinematicBody2D" groups=["enemy"]]
material = SubResource( 40 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 2
position = Vector2( 0, 4 )
shape = SubResource( 19 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 0.486275, 0.486275, 0.486275, 0.666667 )
position = Vector2( -7.15256e-07, 26.5 )
scale = Vector2( 1.125, 0.65625 )
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 4 )
shape = SubResource( 22 )

[node name="damagesound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
pitch_scale = 0.8

[node name="AnimatedSprite1" type="AnimatedSprite" parent="."]
use_parent_material = true
scale = Vector2( 2, 2 )
frames = SubResource( 21 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
use_parent_material = true
scale = Vector2( 2, 2 )
frames = SubResource( 65 )

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
use_parent_material = true
scale = Vector2( 2, 2 )
frames = SubResource( 82 )

[node name="blood" type="CPUParticles2D" parent="."]
emitting = false
amount = 5
one_shot = true
explosiveness = 0.41
lifetime_randomness = 0.3
local_coords = false
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 3.0
spread = 180.0
gravity = Vector2( 0, 10 )
initial_velocity = 10.0
scale_amount = 0.2
scale_amount_random = 0.2
color = Color( 1, 0.984314, 0.580392, 1 )

[node name="damagecolor" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="damagecolor" to="." method="_on_damagecolor_timeout"]
